--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+        "build:frontend": "npm --prefix ../frontend ci && npm --prefix ../frontend run build",
+    "start": "node server.js",
+
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
